aimmo-game-allocator/service.yml
apiVersion: v1
kind: Service
metadata:
  name: game-allocator
  labels:
    app: game-allocator
spec:
  ports:
    - port: 5000
      protocol: TCP
  selector:
    app: game-allocator
