aimmo-game-allocator/ingress.yml
# This yaml needs to be deployed every time a new version of the game is released.
# The contents of ingress_nginx are a one time set up. See more in the wiki.
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: allocator-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: local.aimmo.codeforlife.education
      http:
        paths:
          - path: /allocator
            backend:
              serviceName: game-allocator
              servicePort: 5000
          - backend:
              serviceName: default-http-backend
              servicePort: 80
